# bevy_sky_gradient

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: sky_gradient.wgsl
assets/shaders/: aurora.wgsl  fog.wgsl  full_aurora.wgsl  full_gradient.wgsl  full_sky.wgsl  noise.wgsl  sky_gradient.wgsl  sky_shader.wgsl  stars.wgsl  sun.wgsl
assets/sky_presets/: default.ron  purple.ron
examples/: basic.rs  custom_day_night_cycle.rs  day_night_cycle.rs  edit_day_night_cycle.rs  fog.rs  simple_day_night_cycle.rs
src/: ambient_driver.rs  assets.rs  aurora.rs  aurora_material.rs  bind_groups.rs  cycle.rs  gradient.rs  gradient_driver.rs  gradient_material.rs  lib.rs  noise.rs  plugin.rs  presets.rs  sky_material.rs  sky_texture.rs  sun.rs  utils.rs
