[package]
name = "bevy_sky_gradient"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:ron", "dep:bincode"]

[dependencies]
bevy = "0.16"
thiserror = "2"

# optional serialization
serde = { version= "1", features = ["derive"], optional = true }
# to serilalize user readable files
ron = {version = "0.12", optional = true}
# to serialize compact files
bincode = {version = "2", optional = true, features = ["serde"]}

[dev-dependencies]
rand = "0.9"
bevy_flycam = "0.16.1"
egui-colorgradient = "0.2.3"
bevy-inspector-egui = "0.33"
